Make a hashtable for settings + remove comment (why the diff is weird)